--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="bg-secondary">
         <div class='container mt-3 d-flex flex-wrap justify-content-center gap-3'>
-            <h1 class="alert alert-primary w-100 text-center">Loding...</h1>
+            <h1 class="alert alert-primary w-100 text-center">Loading...</h1>
         </div>
         <script src="/js/index.js"></script>
         <script src="/js/bootstrap.bundle.min.js"></script>
