--- a/views/product.html
+++ b/views/product.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-secondary">
         <div class='container mt-5'>
-            <h1 class="alert alert-primary w-100 text-center">Loding...</h1>
+            <h1 class="alert alert-primary w-100 text-center">Loading...</h1>
         </div>
         <script src="/js/product.js"></script>
         <script src="/js/bootstrap.bundle.min.js"></script>
